set(this Sandbox)
ucm_add_dirs(source assets TO sandbox_sources RECURSIVE ADDITIONAL_EXT scene glsl png)
add_executable(${this} ${sandbox_sources})
target_link_libraries(${this} PRIVATE Engine)
set_target_properties(${this} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set_target_properties(${this} PROPERTIES FOLDER apps)